--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@johnbillion/wp-hooks",
+  "name": "@johnbillion/wp-hooks-generator",
   "version": "0.2.6",
-  "description": "WordPress actions and filters in machine-readable JSON format",
+  "description": "Generates a list of WordPress actions and filters from code and outputs them in machine-readable JSON format.",
+  "private": true,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/johnbillion/wp-hooks.git"
+    "url": "git+https://github.com/johnbillion/wp-hooks-generator.git"
   },
   "keywords": [
     "wordpress"
@@ -18,7 +19,7 @@
   "author": "John Blackbourn",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/johnbillion/wp-hooks/issues"
+    "url": "https://github.com/johnbillion/wp-hooks-generator/issues"
   },
   "dependencies": {
     "json-schema-to-typescript": "^7.1"
@@ -26,5 +27,5 @@
   "scripts": {
     "generate-interfaces": "json2ts --input schema.json --output=interface/index.d.ts"
   },
-  "homepage": "https://github.com/johnbillion/wp-hooks#readme"
+  "homepage": "https://github.com/johnbillion/wp-hooks-generator#readme"
 }
