--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "johnbillion/wp-hooks-generator",
-    "description": "Generates a list of WordPress actions and filters from code and outputs them in machine-readable JSON format.",
+    "description": "Generates a JSON representation of the WordPress actions and filters in your code",
     "type": "library",
     "license": "GPL-3.0-or-later",
     "authors": [
