--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@johnbillion/wp-hooks-generator",
   "version": "0.3.1",
-  "description": "Generates a list of WordPress actions and filters from code and outputs them in machine-readable JSON format.",
+  "description": "Scans the WordPress actions and filters in your code and saves them as JSON.",
   "private": true,
   "repository": {
     "type": "git",
