Enable known Composer plugins.

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
         }
     ],
 	"config": {
-		"sort-packages": true
+		"sort-packages": true,
+        "allow-plugins": {
+            "composer/installers": true,
+            "oomphinc/composer-installers-extender": true
+        }
 	},
     "bin": [
         "bin/wp-hooks-generator"
