--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@johnbillion/wp-hooks-generator",
 	"version": "0.8.0",
-	"description": "Scans the WordPress actions and filters in your code and saves them as JSON.",
+	"description": "Generates a JSON representation of the WordPress actions and filters in your code",
 	"private": true,
 	"repository": {
 		"type": "git",
